k8s/applications/ai/openclaw/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw
  namespace: openclaw
  labels:
    app.kubernetes.io/name: openclaw
    app.kubernetes.io/part-of: ai
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
  hostnames:
    - 'openclaw.smadja.dev'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openclaw
          port: 18789
      timeouts:
        request: 0s
        backendRequest: 0s
